palo-installer (0.0.8) UNRELEASED; urgency=low

  * Remove unused debconf template. Closes: #283907 

 -- Joey Hess <joeyh@debian.org>  Thu,  4 Aug 2005 15:37:47 -0400

palo-installer (0.0.7) unstable; urgency=low

  * Colin Watson
    - Use busybox echo and sed instead of /target/bin/echo and
      /target/bin/sed; the former seem to be enough (closes: #283908).
    - palo-installer is Architecture: any, so build it in binary-arch, not
      binary-indep.
  * Updated translations:
    - Belarusian (be.po) by Andrei Darashenka
    - Bulgarian (bg.po) by Ognyan Kulev
    - Welsh (cy.po) by Dafydd Harries
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Esperanto (eo.po) by Serge Leblanc
    - Estonian (et.po) by Siim Põder
    - Basque (eu.po) by Piarres Beobide
    - Gallegan (gl.po) by Jacobo Tarrio
    - Hebrew (he.po) by Lior Kaplan
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Malagasy (mg.po) by Jaonary Rabarisoa
    - Macedonian (mk.po) by Georgi Stanojevski
    - Macedonian (pa_IN.po) by Amanpreet Singh Alam
    - Portuguese (pt.po) by Miguel Figueiredo
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Romanian (ro.po) by Eddy Petrişor
    - Tagalog (tl.po) by Eric Pareja
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Vietnamese (vi.po) by Clytie Siddall
    - Wolof (wo.po) by Mouhamadou Mamoune Mbacke
    - Xhosa (xh.po) by Canonical Ltd
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu

 -- Colin Watson <cjwatson@debian.org>  Fri, 15 Jul 2005 17:15:29 +0100

palo-installer (0.0.6) unstable; urgency=low

  * Joey Hess
    - Add initrd code for 2.6 kernels. Closes: #282851

 -- Joey Hess <joeyh@debian.org>  Thu,  2 Dec 2004 01:09:54 -0500

palo-installer (0.0.5) unstable; urgency=low

  * Call "apt-install palo" in the postinst (closes: #262185).
  * Updated translations: 
    - Arabic (ar.po) by Ossama M. Khayat
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bosnian (bs.po) by Safir Šećerović