@@ -4,7 +4,6 @@ Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Tollef Fog Heen <tfheen@debian.org>, dann frazier <dannf@debian.org>, Joey Hess <joeyh@debian.org>
 Build-Depends: debhelper (>= 4.2.0), po-debconf (>= 0.5.0)
-Standards-Version: 3.6.1
 
 Package: palo-installer
 XC-Package-Type: udeb
@@ -13,4 +12,3 @@ Provides: bootable-system
 Depends: cdebconf-udeb, base-installer, di-utils-mapdevfs
 XB-Installer-Menu-Item: 73
 Description: Install PALO on a hard disk
- This udeb will install PALO on the hard disk.
