@@ -1,24 +1,11 @@
 #!/usr/bin/make -f
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
-# Udebs have no postrm file, don't make one
-export DH_OPTIONS=-n
-
-build: build-stamp
-build-stamp:
+build:
 	dh_testdir
-
-	touch build-stamp
 
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp
-	rm -f debian/files~
 	dh_clean
 
 install: build
@@ -26,20 +13,16 @@ install: build
 	dh_testroot
 	dh_clean -k
 
-
-# Build architecture-independent files here.
 binary-indep: build install
 
-# Build architecture-dependent files here.
 binary-arch: build install
 	dh_testdir
 	dh_testroot
 	dh_installdebconf
-	cp debian/isinstallable debian/palo-installer/DEBIAN/
+	dh_install debian/isinstallable DEBIAN
 	dh_installdeb 
 	dh_gencontrol
 	dh_builddeb
-
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install
