@@ -1,8 +1,11 @@
 palo-installer (0.0.8) UNRELEASED; urgency=low
 
-  * Remove unused debconf template. Closes: #283907 
+  * Remove unused debconf template. Closes: #283907
+  * Remove useless extended package description. Closes: #308606 
+  * Simplify rules file.
+  * Remove standards-version field (not applicable to a udeb).
 
- -- Joey Hess <joeyh@debian.org>  Thu,  4 Aug 2005 15:37:47 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu,  4 Aug 2005 15:39:30 -0400
 
 palo-installer (0.0.7) unstable; urgency=low
 
